projects/compiler/test/parser/invocation_error_typeargs_eof.out
Error at %FILE_NAME%:1:10
Unexpected end of file:
  |  foo<A, B>
              ^